--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.url = jdbc:mysql://localhost:3306/sharead?useUnicode=true&serv
 spring.datasource.username=root
 spring.datasource.password=
 server.port=8000
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.main.allow-circular-references=true
 
