SR-7: Заготовка под Library

--- a/admin/src/main/resources/application.properties
+++ b/admin/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.main.allow-circular-references=true
 file.avatar.viewPath=static/avatars/
 file.avatar.uploadPath=target/classes/static/avatars/
 file.avatar.defaultPicture=default.png
+
+spring.servlet.multipart.max-file-size=25MB
+spring.servlet.multipart.max-request-size=25MB
