SR-13: Добавление фотографии книги в админке

--- a/admin/src/main/resources/application.properties
+++ b/admin/src/main/resources/application.properties
@@ -8,8 +8,12 @@ spring.jpa.show-sql=true
 spring.main.allow-circular-references=true
 
 file.avatar.viewPath=static/avatars/
-file.avatar.uploadPath=target/classes/static/avatars/
+file.avatar.uploadPath=site/target/classes/static/avatars/
 file.avatar.defaultPicture=default.png
+
+
+file.book.viewPath=static/books/
+file.book.uploadPath=site/target/classes/static/books/
 
 spring.servlet.multipart.max-file-size=25MB
 spring.servlet.multipart.max-request-size=25MB
