--- a/admin/src/main/resources/application.properties
+++ b/admin/src/main/resources/application.properties
@@ -11,6 +11,8 @@ file.avatar.viewPath=static/avatars/
 file.avatar.uploadPath=site/target/classes/static/avatars/
 file.avatar.defaultPicture=default.png
 
+file.userBook.viewPath=static/userBooks/
+file.userBook.uploadPath=site/target/classes/static/userBooks/
 
 file.book.viewPath=static/books/
 file.book.uploadPath=site/target/classes/static/books/
