--- a/site/src/main/resources/application.properties
+++ b/site/src/main/resources/application.properties
@@ -11,5 +11,15 @@ file.avatar.viewPath=static/avatars/
 file.avatar.uploadPath=site/target/classes/static/avatars/
 file.avatar.defaultPicture=default.png
 
+file.userBook.viewPath=static/userBooks/
+file.userBook.uploadPath=site/target/classes/static/userBooks/
+
+
+file.book.viewPath=static/books/
+file.book.uploadPath=site/target/classes/static/books/
+
 spring.servlet.multipart.max-file-size=25MB
 spring.servlet.multipart.max-request-size=25MB
+#spring.cloud.gcp.credentials.location=site/awesome-shore-347408-e5408323d063.json
+
+spring.cloud.gcp.project-id=awesome-shore-347408
