--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -17,7 +17,11 @@
         <java.version>18</java.version>
     </properties>
     <dependencies>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+            <version>2.6.7</version>
+        </dependency>
         <dependency>
             <groupId>com.example</groupId>
             <artifactId>Sharead</artifactId>
