--- a/admin/src/main/resources/application.properties
+++ b/admin/src/main/resources/application.properties
@@ -19,3 +19,13 @@ file.book.uploadPath=site/target/classes/static/books/
 
 spring.servlet.multipart.max-file-size=25MB
 spring.servlet.multipart.max-request-size=25MB
+
+spring.mail.protocol=smtp
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=kundelikwarner@gmail.com
+spring.mail.password=tbkdvnhlbzicjabz
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.smtp.ssl.trust = smtp.gmail.com
+mail.smtp.ssl.trust = "smtp.gmail.com
