--- a/site/pom.xml
+++ b/site/pom.xml
@@ -125,6 +125,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-websocket</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+            <version>2.6.7</version>
+        </dependency>
     </dependencies>
 
     <build>
