--- a/site/src/main/resources/application.properties
+++ b/site/src/main/resources/application.properties
@@ -23,3 +23,14 @@ spring.servlet.multipart.max-request-size=25MB
 #spring.cloud.gcp.credentials.location=site/awesome-shore-347408-e5408323d063.json
 
 spring.cloud.gcp.project-id=awesome-shore-347408
+
+
+spring.mail.protocol=smtp
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=kundelikwarner@gmail.com
+spring.mail.password=tbkdvnhlbzicjabz
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.smtp.ssl.trust = smtp.gmail.com
+mail.smtp.ssl.trust = "smtp.gmail.com
